--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lucide-react": "^0.555.0",
     "motion": "^12.23.25",
     "nanoid": "^5.1.6",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "opentype.js": "^1.3.4",
     "react": "19.2.0",
