--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.10",
     "playwright": "^1.57.0",
+    "schema-dts": "^1.1.5",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
